[b]Additions[/b]
*Add Profile Binds option to the general section of the config. This is a global setting for all ElvUI profiles. Is is disabled by default. When enabled it snapshots your keybinds to your ElvUI profile. That way when you change talent specializations and you have the Dual Profile feature enabled your keybinds change with your spec.

[b]General Changes[/b]
*Removed the WhisperLevel option I added previously because it was a pain to debug myself. And it was flawed.
*Routes and GatherMate2 addons will now use both minimaps instead of just the farmmode map.
*Chat frames without backdrops should now properly hide their chat tabs unless mouseovered.
*Remove the minimum requirement of .64 to the UIScale. It still however cannot go over 1.

[b]Fixes[/b]
*Fix the BNConversation prefix in chat.
*The glow feature when targeting other raid/party members wasn't updating when someone joined the party. This sometimes produced unintended results.
*Fix pvp text not working after joining a group.
*Users were unable to change the left and right panel sizes while chat was disabled.