@@ -1,5 +1,6 @@
 [b]Additions[/b]
 *Add Profile Binds option to the general section of the config. This is a global setting for all ElvUI profiles. Is is disabled by default. When enabled it snapshots your keybinds to your ElvUI profile. That way when you change talent specializations and you have the Dual Profile feature enabled your keybinds change with your spec.
+*Add option under the player unitframe section to Enable/Disable the Rested Icon.
 
 [b]General Changes[/b]
 *Removed the WhisperLevel option I added previously because it was a pain to debug myself. And it was flawed.
